syntax = "proto3";
package s3_file;


message FileMetadata {
    repeated TopicMetadata topics_metadata = 1;
}

message TopicMetadata {
    string name = 1;
    uint32 partition = 2;
    uint64 file_offset_start = 4;
    uint64 file_offset_end = 5;
    uint32 num_messages = 6;
}

message TopicData {
    string topic_name = 1;
    uint32 partition = 2;
    repeated TopicMessage messages = 3;
}

message TopicMessage {
    uint64 timestamp = 2;
    bytes key = 3;
    bytes value = 4;
}

